# NetWork

Net_Framework/: CMakeLists.txt  Net_Framework.sln  README.MD
Net_Framework/net_client/: CMakeLists.txt  demo_client.cpp  net_client.vcxproj  net_client.vcxproj.filters
Net_Framework/net_client/include/: demo_client.h
Net_Framework/net_client/src/: demo_client.cpp
Net_Framework/net_server/: CMakeLists.txt  demo_server.cpp  net_server.vcxproj  net_server.vcxproj.filters
Net_Framework/net_server/include/: demo_server.h
Net_Framework/net_server/src/: demo_server.cpp
Net_Framework/network_interface/: CMakeLists.txt  network_interface.vcxproj  network_interface.vcxproj.filters
Net_Framework/network_interface/include/: net.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
websocket/: Benchmark.hpp  Convertor.hpp  HeartBeatSession.cpp  HeartBeatSession.hpp  MessageDispatcher.hpp  MessageYeildingHelper.hpp  MyDebug.hpp  NetCard.cpp  NetCard.hpp  RegTest.hpp  RegistryAccessor.hpp  RegistryActions.hpp  RegistryException.hpp  ResolveHelper.hpp  ServiceHandler.cpp  ServiceHandler.hpp  Services.cpp  Services.hpp  Startups.hpp  SysTest.h  Sysinfo.hpp  SysinfoException.hpp  VirtualDetection.hpp  WinNT.hpp  WrapHelper.hpp  main.cpp
